# Medi-Analyser

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: agent.py  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FileUpload.jsx  LoadingAnalysis.jsx  SpecialistCard.jsx
